src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@wmA.snap
---
source: src/tests/window_opening.rs
description: "want maximized: A\nconfig:\nwindow-rule {\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized]
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized, Activated]

unmaximize configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
